chore: update plex compose file to support many openvpn providers
Signed-off-by: Jordan Shatford <jordanshatford@live.com>

--- a/plex/example.env
+++ b/plex/example.env
@@ -8,7 +8,8 @@ TZ=America/Halifax
 PUID=1000
 PGID=1000
 
-# VPN setup (NordVPN)
-NORDVPN_USER=SECRET
-NORDVPN_PASSWORD=SECRET
-NORDVPN_SERVER_COUNTRIES=Canada
+# VPN setup (OpenVPN)
+OPENVPN_SERVICE_PROVIDER=nordvpn
+OPENVPN_USER=SECRET
+OPENVPN_PASSWORD=SECRET
+OPENVPN_SERVER_COUNTRIES=Canada
