--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -55,11 +55,11 @@ services:
       - TZ=${TZ}
       - PUID=${PUID}
       - PGID=${PGID}
-      - VPN_SERVICE_PROVIDER=nordvpn
+      - VPN_SERVICE_PROVIDER=${OPENVPN_SERVICE_PROVIDER}
       - VPN_TYPE=openvpn
-      - OPENVPN_USER=${NORDVPN_USER}
-      - OPENVPN_PASSWORD=${NORDVPN_PASSWORD}
-      - SERVER_COUNTRIES=${NORDVPN_SERVER_COUNTRIES}
+      - OPENVPN_USER=${OPENVPN_USER}
+      - OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
+      - SERVER_COUNTRIES=${OPENVPN_SERVER_COUNTRIES}
     restart: unless-stopped
 
   qbittorrent:
