feat: allow specifying claim for plex server
Signed-off-by: Jordan Shatford <jordanshatford@live.com>

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -162,6 +162,7 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - VERSION=latest
+      - PLEX_CLAIM=${PLEX_CLAIM}
     volumes:
       - ${ROOT_DIRECTORY}/data/dockerdata/plex:/config:rw
       - ${ROOT_DIRECTORY}/data/media:/data/media
