--- a/plex/example.env
+++ b/plex/example.env
@@ -13,3 +13,6 @@ OPENVPN_SERVICE_PROVIDER=nordvpn
 OPENVPN_USER=SECRET
 OPENVPN_PASSWORD=SECRET
 OPENVPN_SERVER_COUNTRIES=Canada
+
+# Plex Claim (Optional) Found: https://plex.tv/claim
+PLEX_CLAIM=
