fix: spelling errors in docker-compose.yml
Signed-off-by: Jordan Shatford <jordanshatford@live.com>

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -3,7 +3,7 @@
 # choice (as long as it is supported in the gluetun docker image).
 #
 # VPN:
-#   Overseerr, Bazarr, Sonarr, Radarr, Prowlarr, Qbittorrent
+#   Overseerr, Bazarr, Sonarr, Radarr, Prowlarr, qBittorrent
 # Non-VPN
 #   Plex
 #
@@ -20,7 +20,7 @@
 #  /data/dockerdata/sonarr       - Sonarr
 #  /data/dockerdata/radarr       - Radarr
 #  /data/dockerdata/prowlarr     - Prowlarr
-#  /data/dockerdata/qbt          - QBitorrent
+#  /data/dockerdata/qbittorrent  - qBittorrent
 #
 # Directories for Torrents:
 #  /data/torrents/movies         - Movies
