feat: add profiles for all optional services
These will all be included by default but can be excluded if
desired.

closes: #12

Signed-off-by: Jordan Shatford <jordanshatford@live.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,8 @@ services:
     depends_on:
       - sonarr
       - radarr
+    profiles:
+      - bazarr
 
   overseerr:
     image: linuxserver/overseerr:latest
@@ -145,6 +147,8 @@ services:
     depends_on:
       - sonarr
       - radarr
+    profiles:
+      - overseerr
 
   tautulli:
     image: linuxserver/tautulli:latest
@@ -158,6 +162,8 @@ services:
     volumes:
       - ${ROOT_DIRECTORY}/data/dockerdata/tautulli:/config
     restart: unless-stopped
+    profiles:
+      - tautulli
 
   plex:
     image: linuxserver/plex:latest
