--- a/example.env
+++ b/example.env
@@ -8,6 +8,9 @@ TZ=America/Halifax
 PUID=1000
 PGID=1000
 
+# Optional services to include when running compose.
+COMPOSE_PROFILES=bazarr,overseerr,tautulli
+
 # VPN setup (OpenVPN)
 OPENVPN_SERVICE_PROVIDER=nordvpn
 OPENVPN_USER=SECRET
