chore: add latest tag to requestrr
Signed-off-by: Jordan Shatford <jordanshatford@live.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,7 +151,7 @@ services:
       - overseerr
 
   requestrr:
-    image: thomst08/requestrr
+    image: thomst08/requestrr:latest
     container_name: requestrr
     ports:
       - 4545:4545
