--- a/example.env
+++ b/example.env
@@ -9,7 +9,7 @@ PUID=1000
 PGID=1000
 
 # Optional services to include when running compose.
-COMPOSE_PROFILES=bazarr,overseerr,requestrr,tautulli
+COMPOSE_PROFILES=bazarr,maintainerr,overseerr,requestrr,tautulli
 
 # VPN setup (OpenVPN)
 OPENVPN_SERVICE_PROVIDER=nordvpn
