--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,8 @@ services:
     container_name: overseerr
     ports:
       - 5055:5055
+    extra_hosts:
+      - host.docker.internal:host-gateway
     environment:
       - TZ=${TZ}
       - PUID=${PUID}
@@ -170,6 +172,8 @@ services:
     user: ${PUID}:${PGID}
     ports:
       - 6246:6246
+    extra_hosts:
+      - host.docker.internal:host-gateway
     environment:
       - TZ=${TZ}
     volumes:
@@ -186,6 +190,8 @@ services:
     container_name: tautulli
     ports:
       - 8181:8181
+    extra_hosts:
+      - host.docker.internal:host-gateway
     environment:
       - TZ=${TZ}
       - PUID=${PUID}
