feat: allow having dockerdata and data (media/torrents) in separate directories
closes: #15

Signed-off-by: Jordan Shatford <jordanshatford@live.com>

--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
-# Directory to store all information.
-ROOT_DIRECTORY=.
+# Root directory to store all data related to docker containers.
+DOCKERDATA_ROOT_DIRECTORY=.
+# Root directory to store all data (media and torrents).
+DATA_ROOT_DIRECTORY=.
 
 # TZ used in containers.
 TZ=America/Halifax
