--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - 7878:7878 # radarr port
       - 6767:6767 # bazarr port
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/glueton:/gluetun
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/glueton:/gluetun
     environment:
       - TZ=${TZ:-Etc/UTC}
       - PUID=${PUID}
@@ -40,8 +40,8 @@ services:
     #   - 6881:6881
     #   - 6881:6881/udp
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/qbittorrent:/config
-      - ${ROOT_DIRECTORY:-.}/data/torrents:/data/torrents
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/qbittorrent:/config
+      - ${DATA_ROOT_DIRECTORY:-.}/data/torrents:/data/torrents
     environment:
       - TZ=${TZ:-Etc/UTC}
       - PUID=${PUID}
@@ -67,7 +67,7 @@ services:
     # ports:
     #   - 9696:9696
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/prowlarr:/config
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/prowlarr:/config
     environment:
       - TZ=${TZ:-Etc/UTC}
       - PUID=${PUID}
@@ -82,8 +82,8 @@ services:
     # ports:
     #   - 8989:8989
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/sonarr:/config
-      - ${ROOT_DIRECTORY:-.}/data:/data
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/sonarr:/config
+      - ${DATA_ROOT_DIRECTORY:-.}/data:/data
     environment:
       - TZ=${TZ:-Etc/UTC}
       - PUID=${PUID}
@@ -104,8 +104,8 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/radarr:/config
-      - ${ROOT_DIRECTORY:-.}/data:/data
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/radarr:/config
+      - ${DATA_ROOT_DIRECTORY:-.}/data:/data
     restart: unless-stopped
     depends_on:
       - qbittorrent
@@ -123,8 +123,8 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/bazarr:/config
-      - ${ROOT_DIRECTORY:-.}/data/media:/data/media
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/bazarr:/config
+      - ${DATA_ROOT_DIRECTORY:-.}/data/media:/data/media
     restart: unless-stopped
     depends_on:
       - sonarr
@@ -144,7 +144,7 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/overseerr:/config
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/overseerr:/config
     restart: unless-stopped
     depends_on:
       - sonarr
@@ -158,7 +158,7 @@ services:
     ports:
       - 4545:4545
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/requestrr:/root/config
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/requestrr:/root/config
     restart: unless-stopped
     depends_on:
       - sonarr
@@ -177,7 +177,7 @@ services:
     environment:
       - TZ=${TZ:-Etc/UTC}
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/maintainerr:/opt/data
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/maintainerr:/opt/data
     restart: unless-stopped
     depends_on:
       - sonarr
@@ -197,7 +197,7 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/tautulli:/config
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/tautulli:/config
     restart: unless-stopped
     profiles:
       - tautulli
@@ -213,8 +213,8 @@ services:
       - VERSION=latest
       - PLEX_CLAIM=${PLEX_CLAIM}
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/plex:/config
-      - ${ROOT_DIRECTORY:-.}/data/media:/data/media
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/plex:/config
+      - ${DATA_ROOT_DIRECTORY:-.}/data/media:/data/media
     restart: unless-stopped
 
   organizr:
@@ -227,7 +227,7 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
     volumes:
-      - ${ROOT_DIRECTORY:-.}/data/dockerdata/organizr:/config
+      - ${DOCKERDATA_ROOT_DIRECTORY:-.}/dockerdata/organizr:/config
     restart: unless-stopped
     profiles:
       - organizr
